--- a/vignettes/rstac-01-intro.Rmd
+++ b/vignettes/rstac-01-intro.Rmd
@@ -16,22 +16,16 @@ vignette: >
 ---
 
 ```{r prepare, include = FALSE}
-is_online <- tryCatch({
-  res <- httr::GET("https://brazildatacube.dpi.inpe.br/stac/")
-  !httr::http_error(res)
-}, error = function(e) {
-  FALSE
-})
+not_on_cran <- identical(Sys.getenv("NOT_CRAN"), "true")
 
 knitr::opts_chunk$set(
   collapse = TRUE,
-  comment = "#>",
-  eval = is_online
+  comment = "#>"
 )
 library(tibble)
 ```
 
-```{r setup, eval=TRUE, echo=FALSE}
+```{r setup, eval=not_on_cran, echo=FALSE}
 if (!requireNamespace("png")) install.packages("png")
 library(png)
 library(rstac)
@@ -80,41 +74,41 @@ This tutorial use the STAC API made available by the [Brazil Data Cube (BDC)](ht
 
 Let's start by creating a query for the BDC catalog.
 
-```{r queries-1, eval=TRUE}
+```{r queries-1, eval=not_on_cran}
 s_obj <- stac("https://brazildatacube.dpi.inpe.br/stac/")
 s_obj
 ```
 The `RSTACQuery` object stores the metadata of the created query.
 This metadata can be accessed as a list element during query creation.
 
-```{r base-url, eval=TRUE}
+```{r base-url, eval=not_on_cran}
 s_obj$base_url
 ```
 Endpoints are constructed through function concatenations provided by `rstac`. Some examples are shown below:
 
-```{r queries-2, eval=TRUE}
+```{r queries-2, eval=not_on_cran}
 s_obj |> 
   collections()
 ```
 
-```{r queries-3, eval=TRUE}
+```{r queries-3, eval=not_on_cran}
 s_obj |> 
   collections("S2-16D-2")
 ```
 
-```{r queries-4, eval=TRUE}
+```{r queries-4, eval=not_on_cran}
 s_obj |> 
   collections("S2-16D-2") |>
   items()
 ```
 
-```{r queries-5, eval=TRUE}
+```{r queries-5, eval=not_on_cran}
 s_obj |> 
   collections("S2-16D-2") |> 
   items(feature_id = "S2-16D_V2_015011_20190117")
 ```
 
-```{r queries-6, eval=TRUE}
+```{r queries-6, eval=not_on_cran}
 s_obj |> 
   stac_search(collections = c("CB4-16D-2", "S2-16D-2")) |>
   ext_query("bdc:tile" == "007004")
@@ -131,7 +125,7 @@ These options are available in the `httr` package documentation in the [`config`
 
 ### HTTP GET: `get_request()`{-}
 
-```{r request-1}
+```{r request-1, eval=not_on_cran}
 s_obj |>
   collections(collection_id = "CB4-16D-2") |>
   items() |>
@@ -140,7 +134,7 @@ s_obj |>
 
 ### HTTP POST: `post_request()`{-}
 
-```{r request-2}
+```{r request-2, eval=not_on_cran}
 s_obj |>
   stac_search(
     collections = c("CB4-16D-2", "S2-16D-2"),
@@ -151,7 +145,7 @@ s_obj |>
 
 Example of providing an additional argument to HTTP verb in a request:
 
-```{r request-3}
+```{r request-3, eval=not_on_cran}
 s_obj |> 
   stac_search(collections = c("CB4-16D-2", "S2-16D-2")) |>
   post_request(config = c(httr::add_headers("x-api-key" = "MY-KEY")))
@@ -163,14 +157,14 @@ Each `rstac` object is mapped according to the endpoints of the STAC spec. In th
 
 #### `STACCatalog` object{-}
 
-```{r catalog}
+```{r catalog, eval=not_on_cran}
 s_obj |> 
   get_request()
 ```
 
 #### `STACCollection` object{-}
 
-```{r collection}
+```{r collection, eval=not_on_cran}
 s_obj |>
   collections("S2-16D-2") |>
   get_request()
@@ -178,7 +172,7 @@ s_obj |>
 
 #### `Item` object{-}
 
-```{r item}
+```{r item, eval=not_on_cran}
 s_obj |>
   collections("CB4-16D-2") |>
   items(feature_id = "CB4-16D_V2_000002_20230509") |>
@@ -187,7 +181,7 @@ s_obj |>
 
 #### `Items` object{-}
 
-```{r item-collection}
+```{r item-collection, eval=not_on_cran}
 s_obj |> 
   stac_search(collections = c("CB4_64_16D_STK", "S2-16D-2")) |>
   get_request()
@@ -210,7 +204,7 @@ The `Items` object have some facilitating functions to manipulate/extract inform
 
 It is interesting to verify the fields of items before filtering:
 
-```{r fields}
+```{r fields, eval=not_on_cran}
 s_obj |>
   stac_search(
     collections = "CB4-16D-2",
@@ -222,7 +216,7 @@ s_obj |>
 
 Let's filter items that have the percentage of clouds smaller than 10%:
 
-```{r filter}
+```{r filter, eval=not_on_cran}
 s_obj |>
   stac_search(
     collections = "CB4-16D-2",
@@ -233,7 +227,7 @@ s_obj |>
 ```
 Number of items returned in the query (in this case equal to the limit defined as parameter):
 
-```{r length}
+```{r length, eval=not_on_cran}
 s_obj |>
   stac_search(
     collections = "CB4-16D-2",
@@ -244,7 +238,7 @@ s_obj |>
 ```
 Number of matched items in the query:
 
-```{r matched}
+```{r matched, eval=not_on_cran}
 s_obj |>
   stac_search(
     collections = "CB4-16D-2",
@@ -255,7 +249,7 @@ s_obj |>
 ```
 Paginating all items that were matched in the query:
 
-```{r fetch}
+```{r fetch, eval=not_on_cran}
 items_fetched <- s_obj |>
   stac_search(
     collections = "CB4-16D-2",
@@ -268,13 +262,13 @@ items_fetched
 ```
 Note that all items was fetched:
 
-```{r length-2}
+```{r length-2, eval=not_on_cran}
 items_length(items_fetched)
 ```
 
 Listing the assets of the retrieved items:
 
-```{r assets}
+```{r assets, eval=not_on_cran}
 items_assets(items_fetched)
 ```
 
@@ -292,7 +286,7 @@ For the URL you can add the GDAL library drivers for the following schemes:
 
 Listing the assets names of all items:
 
-```{r assets-2}
+```{r assets-2, eval=not_on_cran}
 s_obj |>
   stac_search(
     collections = "CB4-16D-2",
@@ -304,7 +298,7 @@ s_obj |>
 
 Selecting assets that have names `"BAND14"` and `"NDVI"`
 
-```{r assets-select}
+```{r assets-select, eval=not_on_cran}
 selected_assets <- s_obj |>
   stac_search(
     collections = "CB4-16D-2",
@@ -314,20 +308,20 @@ selected_assets <- s_obj |>
   assets_select(asset_names = c("BAND14", "NDVI"))
 ```
 
-```{r assets-3}
+```{r assets-3, eval=not_on_cran}
 items_assets(selected_assets)
 ```
 
 Listing asset urls from the selected bands:
 
-```{r assets-url}
+```{r assets-url, eval=not_on_cran}
 selected_assets |> 
   assets_url()
 ```
 
 Renaming assets using the pattern `<old-name> = <new-name>`
 
-```{r assets-renamed}
+```{r assets-renamed, eval=not_on_cran}
 renamed_assets <- selected_assets |> 
   assets_rename(BAND14 = "B14")
 renamed_assets
@@ -336,7 +330,7 @@ renamed_assets
 In the `assets` field of the output it can be seen that the asset's name has changed.
 It is also possible to check the asset names using the `items_assets()` function.
 
-```{r assets-4}
+```{r assets-4, eval=not_on_cran}
 items_assets(renamed_assets)
 ```
 
@@ -345,18 +339,7 @@ items_assets(renamed_assets)
 
 `rstac` also provides a helper function to plot preview assets (e.g. thumbnail and quicklook).
 
-```{r asset-preview-check, eval=TRUE, include=FALSE, echo=FALSE}
-is_accessible <- is_online && tryCatch({
-  res <- httr::HEAD(
-    assets_url(items_fetched$features[[2]], asset_names = "thumbnail")
-  )
-  !httr::http_error(res)
-}, error = function(e) {
-  FALSE
-})
-```
-
-```{r plot-preview, eval=is_accessible, fig.height=3, fig.width=5}
+```{r plot-preview, eval=not_on_cran, fig.height=3, fig.width=5}
 second_item <- items_fetched$features[[2]]
 second_item |>
   assets_url(asset_names = "thumbnail") |>
