Fix dependencies, fix vignettes and README

--- a/README.Rmd
+++ b/README.Rmd
@@ -48,9 +48,7 @@ install.packages("rstac")
 To install the development version of `rstac`, run the following commands
 
 ```{R install-dev, eval=FALSE}
-# load necessary libraries
-library(devtools)
-install_github("brazil-data-cube/rstac")
+remotes::install_github("brazil-data-cube/rstac")
 ```
 
 Importing `rstac` package:
@@ -106,10 +104,10 @@ containing a feature collection).
 
 ```{R bdc-items1, echo=TRUE}
 
-it_obj <- s_obj |>
+it_obj <- s_obj %>%
   stac_search(collections = "CB4-16D-2",
               bbox = c(-47.02148, -17.35063, -42.53906, -12.98314),
-              limit = 100) |> 
+              limit = 100) %>% 
   get_request()
 
 it_obj
@@ -121,9 +119,9 @@ HTTP requests, allowing the use of tokens from the authorization protocols OAuth
 an example of how to pass a parameter token on a HTTP request.
 
 ```{R bdc-items2, eval=FALSE}
-it_obj <- s_obj |>
+it_obj <- s_obj %>%
   stac_search(collections = "CB4-16D-2",
-              bbox = c(-47.02148, -17.35063, -42.53906, -12.98314)) |>
+              bbox = c(-47.02148, -17.35063, -42.53906, -12.98314)) %>%
   get_request(add_headers("x-api-key" = "MY-TOKEN"))
 ```
 
@@ -137,7 +135,7 @@ In the example below, we get how many items matched the search criteria:
 
 ```{R bdc-items3, echo=TRUE}
 # it_obj variable from the last code example
-it_obj |> 
+it_obj %>% 
   items_matched()
 ```
 
@@ -145,7 +143,7 @@ However, if we count how many items there are in `it_obj` variable, we get `10`,
 meaning that more items could be fetched from the STAC service:
 
 ```{R bdc-items4, echo=TRUE}
-it_obj |> 
+it_obj %>% 
   items_length()
 ```
 
@@ -153,10 +151,10 @@ it_obj |>
 ```{R bdc-items5, echo=TRUE}
 # fetch all items from server 
 # (but don't stored them back in it_obj)
-it_obj <- it_obj |> 
+it_obj <- it_obj %>% 
   items_fetch(progress = FALSE) 
 
-it_obj |>
+it_obj %>%
   items_length()
 ```
 
@@ -170,7 +168,7 @@ below downloads the `thumbnail` assets (.png files) of `10` items stored in
 `it_obj` variable.
 
 ```{R download, eval=FALSE}
-download_items <- it_obj |>
+download_items <- it_obj %>%
   assets_download(assets_name = "thumbnail", items_max = 10)
 ```
 
@@ -183,12 +181,12 @@ natural way. For a complete
 ```{R cql2, echo=TRUE}
 s_obj <- stac("https://planetarycomputer.microsoft.com/api/stac/v1")
 
-it_obj <- s_obj |> 
+it_obj <- s_obj %>% 
   ext_filter(
     collection == "sentinel-2-l2a" && `s2:vegetation_percentage` >= 50 &&
       `eo:cloud_cover` <= 10 && `s2:mgrs_tile` == "20LKP" && 
       anyinteracts(datetime, interval("2020-06-01", "2020-09-30"))
-  ) |>
+  ) %>%
   post_request()
 ```
 
@@ -229,10 +227,9 @@ based on the STAC API specifications.
 1. Make a project
 [fork](https://docs.github.com/en/github/getting-started-with-github/fork-a-repo).
 2. Create a file inside the `R/` directory called `ext_{extension_name}.R`.
-3. In the code, you need to specify a subclass name (e.g.`ext_subclass`) for 
-your extension in [`RSTACQuery`](https://github.com/OldLipe/rstac/blob/49370251033cca26c6da5b1a38f6d4fa4a83bb96/R/documents.R#L33-L40) function constructor, and implement the S3 generics methods: [`get_endpoint`](https://github.com/OldLipe/rstac/blob/49370251033cca26c6da5b1a38f6d4fa4a83bb96/R/extensions.R#L87-L90), 
-[`before_request`](https://github.com/OldLipe/rstac/blob/49370251033cca26c6da5b1a38f6d4fa4a83bb96/R/extensions.R#L93-L96), and [`after_response`](https://github.com/OldLipe/rstac/blob/49370251033cca26c6da5b1a38f6d4fa4a83bb96/R/extensions.R#L99-L102). Using these S3 generics methods you 
-can define how parameters must be submitted to the HTTP request and the types 
-of the returned documents responses. See the implemented [ext_query](https://github.com/brazil-data-cube/rstac/blob/master/R/ext_query.R) 
-API extension as an example.  
-4. Make a [Pull Request](https://docs.github.com/en/github/collaborating-with-issues-and-pull-requests/creating-a-pull-request) on the branch [dev](https://github.com/OldLipe/rstac/tree/dev).
+3. In the code, you need to specify a subclass name (e.g.`my_subclass`) for 
+your extension and use it when calling [`rstac_query()`](https://github.com/brazil-data-cube/rstac/blob/master/R/query-funs.R) function. You also need to implement for your subclass the following S3 generic functions: [`before_request()`](https://github.com/brazil-data-cube/rstac/blob/master/R/extensions.R), [`after_response()`](https://github.com/brazil-data-cube/rstac/blob/master/R/extensions.R), and [`parse_params()`](https://github.com/brazil-data-cube/rstac/blob/master/R/extensions.R). With these S3 generics methods you 
+can define how parameters should be submitted to the HTTP request and the types 
+of the returned documents. See the implemented [ext_filter](https://github.com/brazil-data-cube/rstac/blob/master/R/ext_filter.R) 
+API extension as an example.
+4. Make a [Pull Request](https://docs.github.com/en/github/collaborating-with-issues-and-pull-requests/creating-a-pull-request) on the most recent [development branch](https://github.com/brazil-data-cube/rstac/).
