--- a/vignettes/rstac-03-cql2-mpc.Rmd
+++ b/vignettes/rstac-03-cql2-mpc.Rmd
@@ -24,10 +24,16 @@ knitr::opts_chunk$set(
 ```
 
 
-```{r load-rstac, eval=not_on_cran}
-if (!requireNamespace("tmap")) install.packages("tmap")
-library(tmap)
+```{r load-rstac, eval=not_on_cran, message=FALSE, warning=FALSE}
 library(rstac)
+library(tmap)
+library(leaflet)
+library(stars)
+library(slider)
+library(ggplot2)
+library(purrr)
+library(dplyr)
+library(httr)
 ```
 
 # Introduction{-}
@@ -52,9 +58,9 @@ CQL2 expressions can be constructed using properties that refer to attributes of
 In this example, we will search for [Landsat Collection 2 Level-2](https://planetarycomputer.microsoft.com/dataset/landsat-c2-l2) imagery of the Microsoft main campus from December 2020. The name of this collection in STAC service is `landsat-c2-l2`. Here we'll prepare a query to retrieve its queryables and make a `GET` request to the service.
 
 ```{r queryables, eval=not_on_cran}
-planetary_computer |>
-  collections("landsat-c2-l2") |> 
-  queryables() |> 
+planetary_computer %>%
+  collections("landsat-c2-l2") %>% 
+  queryables() %>% 
   get_request()
 ```
 
@@ -67,12 +73,12 @@ time_range <- cql2_interval("2020-12-01", "2020-12-31")
 bbox <- c(-122.2751, 47.5469, -121.9613, 47.7458)
 area_of_interest = cql2_bbox_as_geojson(bbox)
 
-stac_items <- planetary_computer |>
+stac_items <- planetary_computer %>%
   ext_filter(
     collection == "landsat-c2-l2" &&
       t_intersects(datetime, {{time_range}}) &&
       s_intersects(geometry, {{area_of_interest}})
-  ) |>
+  ) %>%
   post_request()
 ```
 
@@ -93,9 +99,7 @@ sf <- items_as_sf(stac_items)
 
 # create a function to plot a map
 plot_map <- function(x) {
-  library(tmap)
-  library(leaflet)
-  current.mode <- tmap_mode("view")
+  tmap_mode("view")
   tm_basemap(providers[["Stamen.Watercolor"]]) +
     tm_shape(x) + 
     tm_borders()
@@ -107,7 +111,7 @@ plot_map(sf)
 Some collections use the `eo` extension, which allows us to sort items by attributes like cloud coverage. The next example selects the item with lowest cloud_cover attribute:
 
 ```{r lowest-cloud-cover, eval=not_on_cran}
-cloud_cover <- stac_items |>
+cloud_cover <- stac_items %>%
   items_reap(field = c("properties", "eo:cloud_cover"))
 selected_item <- stac_items$features[[which.min(cloud_cover)]]
 ```
@@ -119,8 +123,8 @@ Each STAC item have an `assets` field which describes files and provides link to
 ```{r assets-list, eval=not_on_cran}
 items_assets(selected_item)
 
-purrr::map_dfr(items_assets(selected_item), function(key) {
-  tibble::tibble(asset = key, description = selected_item$assets[[key]]$title)
+map_dfr(items_assets(selected_item), function(key) {
+  tibble(asset = key, description = selected_item$assets[[key]]$title)
 })
 ```
 
@@ -129,8 +133,8 @@ Here, we’ll inspect the `rendered_preview` asset. To plot this asset, we can u
 ```{r asset-preview, eval=not_on_cran, fig.height=3, fig.width=5}
 selected_item$assets[["rendered_preview"]]$href
 
-selected_item |> 
-  assets_url(asset_names = "rendered_preview") |>
+selected_item %>% 
+  assets_url(asset_names = "rendered_preview") %>%
   preview_plot()
 ```
 
@@ -141,22 +145,21 @@ The `rendered_preview` asset is generated dynamically by Planetary Computer API 
 To sign URL in `rstac`, we can use `items_sign()` function.
 
 ```{r sign-item, eval=not_on_cran}
-selected_item <- selected_item |>
+selected_item <- selected_item %>%
   items_sign(sign_fn = sign_planetary_computer())
 
-selected_item |> 
-  assets_url(asset_names = "blue") |>
+selected_item %>% 
+  assets_url(asset_names = "blue") %>%
   substr(1, 255)
 ```
 
 Everything after the `?` in that URL is a [SAS token](https://learn.microsoft.com/en-us/azure/storage/common/storage-sas-overview) grants access to the data. See https://planetarycomputer.microsoft.com/docs/concepts/sas/ for more on using tokens to access data.
 
 ```{r url-check, eval=not_on_cran}
-library(httr)
-selected_item |> 
-  assets_url(asset_names = "blue") |>
-  httr::HEAD() |>
-  httr::status_code()
+selected_item %>% 
+  assets_url(asset_names = "blue") %>%
+  HEAD() %>%
+  status_code()
 ```
 
 The 200 status code means that we were able to access the data using the signed URL with the SAS token included.
@@ -166,10 +169,9 @@ The 200 status code means that we were able to access the data using the signed 
 We can load up that single COG file using packages like [stars](https://github.com/r-spatial/stars) or [terra](https://github.com/rspatial/terra).
 
 ```{r read-file, eval=not_on_cran}
-library(stars)
-selected_item |> 
-  assets_url(asset_names = "blue", append_gdalvsi = TRUE) |>
-  stars::read_stars(RasterIO = list(nBufXSize = 512, nBufYSize = 512)) |>
+selected_item %>% 
+  assets_url(asset_names = "blue", append_gdalvsi = TRUE) %>%
+  read_stars(RasterIO = list(nBufXSize = 512, nBufYSize = 512)) %>%
   plot(main = "blue")
 ```
 
@@ -182,24 +184,24 @@ In the previous step of this tutorial, we learned how to search for items by spe
 For instance, collections like `sentinel-2-l2a` and `landsat-c2-l2` both implement the [eo](https://github.com/stac-extensions/eo) STAC extension and include an `eo:cloud_cover` property. To filter your search results to only return items that have a cloud coverage of less than 20%, you can use:
 
 ```{r cql2-search-cloud, eval=not_on_cran}
-stac_items <- planetary_computer |>
+stac_items <- planetary_computer %>%
   ext_filter(
     collection %in% c("sentinel-2-l2a", "landsat-c2-l2") &&
       t_intersects(datetime, {{time_range}}) &&
       s_intersects(geometry, {{area_of_interest}}) &&
       `eo:cloud_cover` < 20
-  ) |>
+  ) %>%
   post_request()
 ```
 
 Here we search for `sentinel-2-l2a` and `landsat-c2-l2` assets. As a result, we have images from both collections in our search results. Users can rename the assets to have a common name in both collections.
 
 ```{r assets-rename, eval=not_on_cran}
-stac_items <- stac_items |>
-  assets_select(asset_names = c("B11", "swir16")) |>
+stac_items <- stac_items %>%
+  assets_select(asset_names = c("B11", "swir16")) %>%
   assets_rename(B11 = "swir16")
 
-stac_items |>
+stac_items %>%
   items_assets()
 ```
 
@@ -210,14 +212,14 @@ stac_items |>
 `Item` objects are features of `Items` and store information about assets.
 
 ```{r items-fetch, eval=not_on_cran}
-stac_items <- planetary_computer |>
+stac_items <- planetary_computer %>%
   ext_filter(
     collection == "sentinel-2-l2a" &&
       t_intersects(datetime, interval("2020-01-01", "2020-12-31")) &&
       s_intersects(geometry, {{
         cql2_bbox_as_geojson(c(-124.2751, 45.5469, -123.9613, 45.7458))
       }})
-  ) |>
+  ) %>%
   post_request()
 
 stac_items <- items_fetch(stac_items)
@@ -226,19 +228,15 @@ stac_items <- items_fetch(stac_items)
 We can use the metadata to plot cloud cover of a region over time, for example.
 
 ```{r cloud-cover-ts-plot, eval=not_on_cran}
-library(dplyr)
-library(slider)
-library(ggplot2)
+df <- items_as_sf(stac_items)  %>%
+  mutate(datetime = as.Date(datetime)) %>%
+  group_by(datetime) %>%
+  summarise(`eo:cloud_cover` = mean(`eo:cloud_cover`)) %>%
+  mutate(`eo:cloud_cover` = slide_mean(`eo:cloud_cover`, before = 3, after = 3))
 
-df <- items_as_sf(stac_items)  |>
-  dplyr::mutate(datetime = as.Date(datetime)) |>
-  dplyr::group_by(datetime) |>
-  dplyr::summarise(`eo:cloud_cover` = mean(`eo:cloud_cover`)) |>
-  dplyr::mutate(`eo:cloud_cover` = slider::slide_mean(`eo:cloud_cover`, before = 3, after = 3))
-
-df |> 
-  ggplot2::ggplot() +
-  ggplot2::geom_line(ggplot2::aes(x = datetime, y = `eo:cloud_cover`))
+df %>% 
+  ggplot() +
+  geom_line(aes(x = datetime, y = `eo:cloud_cover`))
 ```
 
 `cql2_bbox_as_geojson()` is a `rstac` helper function and it must be evaluated before the request. This is why we embraced it with `{{`. We use `items_fetch()` to retrieve all paginated items matched in the search.
@@ -249,20 +247,19 @@ df |>
 STAC organizes items in catalogs (`STACCatalog`) and collections (`STACCollection`). These JSON documents contains metadata of the dataset they refer to. For instance, here we look at the [Bands](https://github.com/stac-extensions/eo#band-object) available for [Landsat 8 Collection 2 Level 2](https://planetarycomputer.microsoft.com/dataset/landsat-c2-l2) data:
 
 ```{r collection-landsat-bands, eval=not_on_cran}
-landsat <- planetary_computer |>
-  collections(collection_id = "landsat-c2-l2") |>
+landsat <- planetary_computer %>%
+  collections(collection_id = "landsat-c2-l2") %>%
   get_request()
 
-library(purrr)
-purrr::map_dfr(landsat$summaries$`eo:bands`, tibble::as_tibble_row)
+map_dfr(landsat$summaries$`eo:bands`, as_tibble)
 ```
 
 We can see what [Assets](https://github.com/radiantearth/stac-spec/blob/master/item-spec/item-spec.md#asset-object) are available on our item with:
 
 ```{r landsat-assets, eval=not_on_cran}
-purrr::map_dfr(landsat$item_assets, function(x) {
-    tibble::as_tibble_row(
-      purrr::compact(x[c("title", "description", "gsd")])
+map_dfr(landsat$item_assets, function(x) {
+    as_tibble(
+      compact(x[c("title", "description", "gsd")])
     )
 })
 ```
@@ -270,8 +267,8 @@ purrr::map_dfr(landsat$item_assets, function(x) {
 Some collections, like [Daymet](https://planetarycomputer.microsoft.com/dataset/daymet-daily-na) include collection-level assets. You can use the `assets` property to access those assets.
 
 ```{r collection-daymet, eval=not_on_cran}
-daymet <- planetary_computer |>
-  collections(collection_id = "daymet-daily-na") |>
+daymet <- planetary_computer %>%
+  collections(collection_id = "daymet-daily-na") %>%
   get_request()
 
 daymet
@@ -282,8 +279,8 @@ Just like assets on items, these assets include links to data in Azure Blob Stor
 ```{r daymet-assets, eval=not_on_cran}
 items_assets(daymet)
 
-daymet |>
-  assets_select(asset_names = "zarr-abfs") |>
+daymet %>%
+  assets_select(asset_names = "zarr-abfs") %>%
   assets_url()
 ```
 
