--- a/README.Rmd
+++ b/README.Rmd
@@ -39,7 +39,7 @@ It also supports earlier versions (>= v0.8.0).
 ## Installation
 
 ```{R install, eval=FALSE}
-# install via CRAN 
+# install via CRAN
 install.packages("rstac")
 ```
 
@@ -81,12 +81,10 @@ tibble::tribble(
 ```
 
 These functions can be used to retrieve information from a STAC API service.
-The code below creates a `stac` object and list the available collections of 
-the STAC API of the [Brazil Data Cube](https://data.inpe.br/bdc/web/en/home-page-2/) project of 
-the Brazilian National Space Research Institute (INPE).
+The code below creates a `stac` object and list the available collections of the STAC API of the Brazilian National Space Research Institute (INPE), which contains data from several image collections as well as datacubes of the the [Brazil Data Cube](https://data.inpe.br/bdc/web/en/home-page-2/) Project.
 
 ```{R stac-obj, echo=TRUE}
-s_obj <- stac("https://brazildatacube.dpi.inpe.br/stac/")
+s_obj <- stac("https://data.inpe.br/bdc/stac/v1/")
 
 get_request(s_obj)
 ```
@@ -96,7 +94,7 @@ Cube STAC web service. The `get_request` method makes a HTTP GET connection
 to it and retrieves a STAC Catalog document from the server. Each `links` 
 entry is an available collection that can be accessed via STAC API.
 
-In the code below, we get some STAC items of `CB4-16D-2` collection that
+In the code below, we get some STAC items of `CBERS4-WFI-16D-2` collection that
 intersects the bounding box passed to the `bbox` parameter. To do this, we
 call the `stac_search` function that implements the STAC `/search` 
 endpoint. The returned document is a STAC Item Collection (a geojson 
@@ -105,7 +103,7 @@ containing a feature collection).
 ```{R bdc-items1, echo=TRUE}
 
 it_obj <- s_obj %>%
-  stac_search(collections = "CB4-16D-2",
+  stac_search(collections = "CBERS4-WFI-16D-2",
               bbox = c(-47.02148, -17.35063, -42.53906, -12.98314),
               limit = 100) %>% 
   get_request()
@@ -120,7 +118,7 @@ an example of how to pass a parameter token on a HTTP request.
 
 ```{R bdc-items2, eval=FALSE}
 it_obj <- s_obj %>%
-  stac_search(collections = "CB4-16D-2",
+  stac_search(collections = "CBERS4-WFI-16D-2",
               bbox = c(-47.02148, -17.35063, -42.53906, -12.98314)) %>%
   get_request(add_headers("x-api-key" = "MY-TOKEN"))
 ```
